@@ -1,12 +1,23 @@
 package com.github.ships.ships.fleet;
 
+import lombok.NonNull;
+import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.core.aggregation.ArrayOperators;
+import org.springframework.data.mongodb.core.mapping.Document;
 
 import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+@Document
 public class Fleet {
+
+    @Id
+    private String id;
+
+    @NonNull
+    private String gameId;
+    @NonNull private Integer playerId;
 
     private final List<Ship> ships;
     private final List<Integer> sizesOfShipsToBePlaced;
@@ -18,6 +29,16 @@ public class Fleet {
         this.boardWidth = boardWidth;
         this.boardHeight = boardHeight;
         this.sizesOfShipsToBePlaced = generateSizesOfShipsToBePlaced();
+        placeShipsHardcoded();
+    }
+
+    public List<Collection<Integer>> placeShot(int cellId) {
+        List<Collection<Integer>> shotResult = new ArrayList<>();
+        ships.forEach(s -> {
+            if(!s.placeShot(cellId).get(0).isEmpty()) shotResult.addAll(s.placeShot(cellId));
+        });
+
+        return null;
     }
 
     /* 1x   4-mast
@@ -34,39 +55,35 @@ public class Fleet {
         return sizesOfShipsToBePlaced;
     }
 
-
-    public static void main(String[] args) {
-        //TODO to be removed
-        new Fleet(Collections.emptyList(), 10, 10).placeShips();
-    }
-
-
-    public List<Integer> placeShips() {
-        return placeShipsRandomly();
+    //TODO to be removed once better implementation is done
+    private void placeShipsHardcoded() {
+        ships.add(new Ship(List.of(22, 32, 42, 52)));
+        ships.add(new Ship(List.of(24, 25, 26)));
+        ships.add(new Ship(List.of(55, 56, 57)));
+        ships.add(new Ship(List.of(10, 20)));
+        ships.add(new Ship(List.of(84, 85)));
+        ships.add(new Ship(List.of(71, 81)));
+        ships.add(new Ship(List.of(1)));
+        ships.add(new Ship(List.of(4)));
+        ships.add(new Ship(List.of(39)));
+        ships.add(new Ship(List.of(89)));
     }
 
     private List<Integer> placeShipsRandomly() {
+        //TODO to be corrected and finished
 //        Integer shipSize = sizesOfShipsToBePlaced.get(new Random().nextInt(0, sizesOfShipsToBePlaced.size()));
         Integer shipSize = 4;
         HashMap<Integer, List<Integer>> horizontalLegalPositions = new HashMap<>();
-        IntStream.iterate(1, boardField -> boardField + 1).limit(boardWidth*boardHeight).
-                forEach(boardField -> IntStream.iterate(boardField, cell -> cell + 1).limit(10).limit(boardWidth*boardHeight).boxed().collect(Collectors.toList()).forEach(System.err::print));
-
-
+        IntStream.iterate(1, boardField -> boardField + 1).limit(boardWidth * boardHeight).
+                forEach(boardField -> IntStream.iterate(boardField, cell -> cell + 1).limit(boardField + shipSize).
+                        limit(boardWidth * boardHeight).boxed().collect(Collectors.toList()).forEach(System.err::print));
         return null;
     }
 
-    private void printListTemp(List<Object> list) {
-        System.err.println(list + System.lineSeparator() + System.lineSeparator());
-    }
-
-
     private boolean isValidPlacement(int p) {
-
-
+        //TODO implement
         return true;
     }
-
 
     private List<Integer> addOccupiedFields(int cellID, List<Integer> occupiedFields) {
         occupiedFields.add(cellID);
